syntax = "proto3";

package Network.ErrorType;

enum ErrorType {
    None = 0;
    PacketData = 1;
    DB = 2;
}
